--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,41 @@
 asn1crypto==0.22.0
+beautifulsoup4==4.6.0
+bs4==0.0.1
 certifi==2017.7.27.1
 cffi==1.10.0
 chardet==3.0.4
 cryptography==2.0.2
+dj-database-url==0.4.2
+dj-static==0.0.6
 Django==1.11.4
+django-mssql==1.8
+django-pyodbc-azure==1.11.0.0
 future==0.16.0
 gspread==0.6.2
+gunicorn==19.7.1
 httplib2==0.10.3
-idna==2.5
-line-bot-sdk==1.3.0
+idna==2.6
+line-bot-sdk==1.5.0
 oauth2client==4.1.2
+olefile==0.44
+packaging==16.8
+Pillow==4.2.1
+psycopg2==2.7.1
 pyasn1==0.3.1
 pyasn1-modules==0.0.10
 pycparser==2.18
+pyodbc==4.0.17
 pyOpenSSL==17.2.0
+pyparsing==2.2.0
+pypng==0.0.18
+PyQRCode==1.2.1
+python-dateutil==2.6.1
 pytz==2017.2
-requests==2.18.3
+qrcode==5.3
+reedsolo==0.3
+requests==2.18.4
 rsa==3.4.2
 six==1.10.0
+static3==0.7.0
 uritemplate==3.0.0
 urllib3==1.22
-gunicorn==19.7.1
-dj-database-url==0.4.2
-dj-static==0.0.6
-packaging==16.8
-psycopg2==2.7.1
-pyparsing==2.2.0
-bs4==0.0.1
