--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,6 @@ psycopg2==2.7.1
 pyasn1==0.3.1
 pyasn1-modules==0.0.10
 pycparser==2.18
-pyodbc==4.0.17
 pyOpenSSL==17.2.0
 pyparsing==2.2.0
 pypng==0.0.18
@@ -37,3 +36,4 @@ six==1.10.0
 static3==0.7.0
 uritemplate==3.0.0
 urllib3==1.22
+django-pyodbc-azure==1.11.0.0
